# APITestka

./: .codacy.yaml  .gitignore  CLAUDE.md  README.md  conftest.py  dev-requirements.txt  dev.toml  dev_requirements.txt  dev_setup.py  pyproject.toml  requirements.txt  setup.py  setup.toml  stable.toml
.circleci/: config.yml
.claude/: settings.local.json
.github/workflows/: api-testka-github-actions_dev.yml  api-testka-github-actions_dev_python3_10.yml  api-testka-github-actions_dev_python3_11.yml  api-testka-github-actions_dev_python3_8.yml  api-testka-github-actions_dev_python3_9.yml  api-testka-github-actions_stable.yml  api-testka-github-actions_stable_python3_10.yml  api-testka-github-actions_stable_python3_11.yml  api-testka-github-actions_stable_python3_8.yml  api-testka-github-actions_stable_python3_9.yml  api-testkal-github-actions_dev.yml  api-testkal-github-actions_stable.yml  ci.yml  dev_python3_10.yml  dev_python3_11.yml  dev_python3_12.yml  dev_python3_8.yml  dev_python3_9.yml  publish.yml  stable_python3_10.yml  stable_python3_11.yml  stable_python3_12.yml  stable_python3_8.yml  stable_python3_9.yml
README/: README_zh-CN.md  README_zh-TW.md
apitestka_driver/: generate_apitestka_driver.py
architecture_diagram/: APITestka_Architecture.drawio
circle_ci_test/: test_ajax_requests.py  test_json_process.py  test_request_delete.py  test_request_get.py  test_request_head.py  test_request_options.py  test_request_patch.py  test_request_post.py  test_request_put.py  test_request_session.py
circle_ci_test/api_delete/: test_request_delete.py
circle_ci_test/api_options/: test_request_options.py
circle_ci_test/execute_test/: execute_action_test.py
circle_ci_test/json/: json_test.py
circle_ci_test/util_json_format/: test_json_process.py
deprecation_for_old_python/: deprecation_dev_setup.py  deprecation_setup.py
docs/source/: conf.py  index.rst
je_api_test/: __init__.py
je_api_test/requests_wrapper/: __init__.py  request_session.py  requests_delete.py  requests_get.py  requests_head.py  requests_options.py  requests_patch.py  requests_post.py  requests_put.py  requests_wrapper.py
je_api_test/utils/: __init__.py  api_test_eceptions_tag.py  api_test_exceptions.py  get_api_data.py
je_api_test/wrapper/: __init__.py
je_api_testka/: __init__.py  __main__.py
je_api_testka/ai/: __init__.py  backend.py  failure_classifier.py  fake_data_generator.py  test_generator.py
je_api_testka/cli/: __init__.py  cli_main.py  completion.py  import_specs.py  repl.py  scaffold_test.py  tui_summary.py
je_api_testka/connection/: __init__.py  cassette.py  connection_options.py  dns_override.py
je_api_testka/data/: __init__.py  env_profile.py  faker_helpers.py  iter_data_rows.py  template_render.py  variable_store.py
je_api_testka/diff/: __init__.py  contract_diff.py  response_diff.py  sla_check.py
je_api_testka/graphql_wrapper/: __init__.py  graphql_method.py
je_api_testka/gui/: api_testka_gui_thread.py  diff_viewer.py  env_manager_model.py  history_panel.py  main_widget.py  main_window.py  message_queue.py  swagger_embed.py
je_api_testka/httpx_wrapper/: async_httpx_method.py  httpx_data.py  httpx_method.py
je_api_testka/integrations/: __init__.py  curl_import.py  github_pr_comment.py  har_import.py  notify.py
je_api_testka/mcp_server/: __init__.py  __main__.py  server.py  tool_definitions.py
je_api_testka/pytest_plugin/: __init__.py  plugin.py
je_api_testka/requests_wrapper/: __init__.py  request_method.py  request_session.py  requests_data.py  requests_data_structure.py  requests_delete.py  requests_get.py  requests_head.py  requests_http_method_wrapper.py  requests_options.py  requests_patch.py  requests_post.py  requests_put.py
je_api_testka/runner/: __init__.py  dependency_runner.py  metadata.py  parallel_runner.py  tag_filter.py
je_api_testka/security/: __init__.py  auth_helpers.py  cors_check.py  cve_check.py  fuzz.py  header_scan.py  rate_limit_probe.py  ssrf_check.py
je_api_testka/spec/: __init__.py  openapi_changelog.py  records_to_openapi.py  schema_inference.py
je_api_testka/sse_wrapper/: __init__.py  sse_method.py
test/: conftest.py  test_executor_integration.py
test_api/: test_api.py  test_api_get_all_data.py  test_request.py  test_request_delete.py  test_request_get.py  test_request_head.py  test_request_patch.py  test_request_post.py  test_request_put.py  test_request_session.py
(+368 files in other folders)
